tests/ui/include.stderr
error: unexpected token
 --> $DIR/tests/ui/include.rs:4:28
  |
4 |         include!("path/to" what);
  |                            ^^^^

error: unexpected token
 --> $DIR/tests/ui/include.rs:5:28
  |
5 |         include!(<path/to> what);
  |                            ^^^^

error: expected `>`
 --> $DIR/tests/ui/include.rs:6:17
  |
6 |         include!(<path/to);
  |                 ^^^^^^^^^^

error: unexpected token in include path
 --> $DIR/tests/ui/include.rs:7:23
  |
7 |         include!(<path[to]>);
  |                       ^^^^

error: expected "quoted/path/to" or <bracketed/path/to>
 --> $DIR/tests/ui/include.rs:8:18
  |
8 |         include!(...);
  |                  ^^^
